# claude-code-proxy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-review.md  architecture.md  providers.md
docs/superpowers/plans/: 2026-05-21-provider-switching-and-subscription-proxy.md
examples/: ccproxy.example.toml
scripts/: ccproxy-current.cmd  ccproxy-current.sh  ccproxy-run.cmd  ccproxy-run.sh  ccproxy-smoke.cmd  ccproxy-smoke.sh  ccproxy-switch.cmd  ccproxy-switch.sh  chatgpt-doctor.cmd  chatgpt-run.cmd  chatgpt-smoke.cmd  install.ps1  install.sh  mock-adapter.cmd  mock_openai_provider.py  run_chatgpt_subscription.ps1  uninstall.ps1  uninstall.sh
src/ccproxy/: __init__.py  adapter.py  cli.py  client.py  config.py  env.py  presets.py  provider_setup.py  secrets.py  server.py  translator.py
tests/: test_active_profile.py  test_adapter.py  test_cli.py  test_cli_windows.py  test_config.py  test_install_scripts.py  test_model_state.py  test_provider_setup.py  test_secrets.py  test_server.py  test_translator.py
wiki/: Architecture.md  Home.md  Providers-And-Models.md  Quick-Start.md  Subscription-Login.md  Testing.md  Troubleshooting.md  _Sidebar.md
wiki/zh-CN/: Architecture.md  Home.md  Providers-And-Models.md  Quick-Start.md  Subscription-Login.md  Testing.md  Troubleshooting.md  _Sidebar.md
