[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cc-provider-proxy"
version = "0.1.0"
description = "Claude Code provider proxy for OpenAI-compatible and Anthropic-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "cc-provider-proxy contributors" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
ccproxy = "ccproxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccproxy"]
